# drmips

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Makefile  NEWS  README.md  README.mdown  README.mkd  _config.yml  brunonova.asc  build.gradle  changelog  gradle-app.setting  index.html  index.md  index.mkd  local.properties  params.json  settings.gradle  snapcraft.yaml
doc/manuals/: CMakeLists.txt  Makefile  README.mkd  configuracao-pt.tex  configuracao-pt_PT.tex  configuration-en.html  configuration-en.tex  configuration.tex  configuração-pt_PT.tex  index.html  manual-en.html  manual-en.tex  manual-pt.html  manual-pt.tex  manual-pt_PT.tex  manual.tex  style.css
doc/manuals/en/: configuration.html  index.html  manual.html
doc/manuals/listings/: alu.txt  component.txt  control.txt  cpu.cpu  instruction.txt  javac_custom_comp.txt  pseudo.txt  set.set  type.txt  wire.txt
doc/manuals/pt/: index.html  manual.html
src/android/: CMakeLists.txt  build.gradle  signApk.bat  signApk.sh
src/android/DrMIPS/: .project  AndroidManifest.xml  CMakeLists.txt  Makefile  ant.properties  build.xml
src/android/DrMIPS/app/: build.gradle
src/android/DrMIPS/app/src/main/: AndroidManifest.xml
src/android/DrMIPS/app/src/main/res/drawable/: tip_back.xml
src/android/DrMIPS/app/src/main/res/layout/: activity_dr_mips.xml  assembled_code_tab.xml  data_memory_tab.xml  datapath_help.xml
src/android/DrMIPS/app/src/main/res/layout-port/: datapath_tab.xml
src/android/DrMIPS/app/src/main/res/menu/: dr_mips.xml
src/android/DrMIPS/app/src/main/res/menu-v11/: dr_mips.xml
src/android/DrMIPS/app/src/main/res/values/: attr.xml  color.xml  strings.xml  styles.xml
src/android/DrMIPS/app/src/main/res/values-pt/: strings.xml
src/android/DrMIPS/app/src/main/res/values-v11/: styles.xml
src/android/DrMIPS/app/src/main/res/values-v21/: styles.xml
src/android/DrMIPS/libs/: DrMIPSSimulator.jar.properties
src/android/DrMIPS/res/drawable/: aux_comp_back_gray.xml  aux_comp_back_white.xml  const_comp_back.xml  control_comp_back.xml  normal_comp_back.xml
src/android/DrMIPS/res/layout/: assembled_code_tab.xml  code_help.xml  code_tab.xml  datapath_tab.xml  statistics_dialog.xml
src/android/DrMIPS/res/layout-port/: code_tab.xml  datapath_tab.xml
src/android/DrMIPS/res/menu/: dr_mips.xml
src/android/DrMIPS/res/menu-v11/: dr_mips.xml
src/android/DrMIPS/res/raw/: pipeline_extended_cpu  pipeline_no_hazard_detection_cpu  pipeline_only_forwarding_cpu  unicycle_cpu  unicycle_no_jump_branch_cpu  unicycle_no_jump_cpu
src/android/DrMIPS/res/values/: strings.xml
src/android/DrMIPS/res/values-pt/: strings.xml
src/android/DrMIPS/res/values-sw600dp/: dimens.xml
src/android/app/src/main/res/drawable/: aux_control_comp_back.xml
src/android/app/src/main/res/layout/: datapath_tab.xml
src/android/app/src/main/res/menu/: dr_mips.xml
src/android/src/main/: AndroidManifest.xml
src/android/src/main/java/brunonova/drmips/android/: Datapath.java  DatapathComponent.java  DrMIPS.java  DrMIPSActivity.java  IOPortTip.java  Util.java
src/android/src/main/res/drawable/: aux_comp_back_black.xml
src/android/src/main/res/layout/: assembled_code_tab.xml  code_help.xml  component_details.xml  datapath_help.xml  registers_tab.xml
src/android/src/main/res/raw/: default_extended_set  pipeline_cpu  pipeline_extended_cpu  pipeline_no_hazard_detection_cpu  unicycle_no_jump_cpu
src/android/src/main/res/values/: dimens.xml  strings.xml  styles.xml
src/android/src/main/res/values-pt/: strings.xml
src/pc/DrMIPS/: CMakeLists.txt  Makefile  build.xml  drmips.in  libs_versions.txt
src/pc/DrMIPS/cpu/: pipeline.cpu  unicycle-extended.cpu
src/pc/DrMIPS/lang/: en.lng  lang.properties  lang_pt.properties  lang_pt_PT.properties  pt_PT.lng
src/pc/DrMIPS/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
src/pc/DrMIPS/src/: CMakeLists.txt  Manifest.mf
src/pc/DrMIPS/src/brunonova/drmips/pc/: DatapathComponent.java  DatapathPanel.java  DlgAbout.java  DlgFindReplace.form  DlgLoading.java  DlgSupportedInstructions.form  DrMIPS.java.in  FrmSimulator.form  FrmSimulator.java  IOPortTip.java  Lang.java  RegistersTable.java  SupportedInstructionsTable.java
src/pc/DrMIPS/src/com/jtattoo/: classpath-exception.txt  lgpl-2.0.txt
src/pc/DrMIPS/src/com/jtattoo/plaf/: About.java  AbstractLookAndFeel.java  AbstractTheme.java  BaseButtonUI.java  BaseComboBoxUI.java  BaseIcons.java  BaseInternalFrameTitlePane.java  BaseMenuItemUI.java  BaseMenuUI.java  BaseTabbedPaneUI.java  BaseTableHeaderUI.java  BaseTitlePane.java  JTattooUtilities.java
src/pc/DrMIPS/src/com/jtattoo/plaf/acryl/: AcrylDefaultTheme.java
src/pc/DrMIPS/src/com/jtattoo/plaf/aluminium/: AluminiumUtils.java
src/pc/DrMIPS/src/com/jtattoo/plaf/graphite/: GraphiteTabbedPaneUI.java  (+1 more)
src/pc/DrMIPS/src/org/jscroll/: JScrollDesktopPane.java
src/pc/DrMIPS/src/org/jscroll/widgets/: ConstructWindowMenu.java  DesktopListener.java  EmptyDesktopIconUI.java  FramePositioning.java  RootToggleButton.java
src/simulator/DrMIPSSimulator/: CMakeLists.txt  build.xml
src/simulator/DrMIPSSimulator/cpu/: default-extended-no-jump.set  default-extended.set  default-no-jump-branch.set  default-no-jump.set  default.set  pipeline-extended.cpu  pipeline-no-hazard-detection.cpu  pipeline-only-forwarding.cpu  pipeline.cpu  unicycle-extended.cpu  unicycle-no-jump-branch.cpu  unicycle-no-jump.cpu  unicycle.cpu
src/simulator/DrMIPSSimulator/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
src/simulator/DrMIPSSimulator/src/: CMakeLists.txt
src/simulator/DrMIPSSimulator/src/brunonova/drmips/simulator/: AbstractInstruction.java  AppInfo.java  AssembledInstruction.java  Assembler.java  CPU.java  Component.java  ControlALU.java  IOPort.java  Instruction.java  InstructionSet.java  IsSynchronous.java  Output.java  SimpleBinaryOperationComponent.java
src/simulator/DrMIPSSimulator/test/: CMakeLists.txt
src/simulator/DrMIPSSimulator/test/brunonova/drmips/simulator/: TestSuite.java
(+443 files in other folders)
